--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
             <div class="projeto">
                 <a href="#" target="_blank">
-                    <img src="Https:/via.placeholder.com/520x1000" alt="">
+                    <img src="https://placehold.co/520x1000" alt="">
                     <h3>Projeto 6</h3>
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -152,7 +152,7 @@
 
             <div class="projeto"> 
                 <a href="#" target="_blank">
-                    <img src="Https:/via.placeholder.com/520x1000" alt="">
+                    <img src="https://placehold.co/520x1000" alt="">
                     <h3>Projeto 7</h3>
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
@@ -163,7 +163,7 @@
 
             <div class="projeto">
                 <a href="#" target="_blank">
-                    <img src="Https:/via.placeholder.com/520x1000" alt="">
+                    <img src="https://placehold.co/520x1000" alt="">
                     <h3>Projeto 8</h3>
                     <div class="informacoes-projeto">
                         <p>Projeto feito usando HTML, CSS e JavaScript</p>
